--- a/peter/single.html
+++ b/peter/single.html
@@ -89,7 +89,7 @@
 
     <!-- header section area end  -->
     <!-- team area start  -->
-    <section class="mar_single_content_area backgr_css" id="mar_single_content_area" data-stellar-background-ratio="0.6" style="background-image: url('assest/img/peter.jpg');background-position: -440px 0px;background-size: 126%;>
+    <section class="mar_single_content_area backgr_css" id="mar_single_content_area" data-stellar-background-ratio="0.6" style="background-image: url('assest/img/peter-blurred.png');background-position: 0px 0px;>
       
         <div class="container">
             <div class="row">
